tests/paczka1/fuzzy1/26509452.err
Error in line 3: YJabLMl A948 4b,4
Error in line 5: YJabLMl A994 59,9
Error in line 9: HZ9suIRwDGw A213 75,6
Error in line 4: pRe6 A948 46,7
Error in line 20: I34sohYNHQ A994 19,0
Error in line 19: HZ9suIRwDGw A948 29,3
Error in line 31: HZ9suIRwDGw A213 39,9
